<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:paddingBottom="10dp" >

    <TextView android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/name"
        android:textColor="@color/textPrimary"
        android:ellipsize="end"
        android:singleLine="true" />

    <TextView android:id="@+id/group_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/description"
        android:textColor="@color/textSecondary"
        android:maxLines="2"
        android:ellipsize="end" />

    <TextView android:id="@+id/group_created_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/group_created_on"
        android:textSize="13sp"
        android:textColor="@color/textPrimary" />

</LinearLayout>