<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EditGroupActivity"
    tools:showIn="@layout/activity_edit_group">

    <EditText android:id="@+id/group_name"
        android:layout_margin="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText android:id="@+id/group_description"
        android:layout_margin="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <com.grasskode.baniyagiri.layouts.FlowLayout
            android:id="@+id/tags_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.grasskode.baniyagiri.layouts.FlowLayout>
    </ScrollView>

    <AutoCompleteTextView
        android:id="@+id/ac_tags"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/selection_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:completionThreshold="1"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890 _"
        android:hint="@string/tag" />

    <Button android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create"
        android:textColor="@color/textPrimary"
        android:background="@color/colorPrimaryLight"
        android:onClick="editGroup" />

    <Button android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/delete"
        android:textColor="@color/textPrimary"
        android:background="@color/colorDelete"
        android:onClick="deleteGroup" />

</LinearLayout>