<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/name"
        android:textColor="@color/textSecondary"
        android:ellipsize="end"
        android:singleLine="true"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView android:id="@+id/group_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/description"
        android:textColor="@color/textPrimary"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center" />

    <LinearLayout android:id="@+id/dates_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView android:id="@+id/group_start_datetime"
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="02 Jan 2016"
            android:textSize="15sp"
            android:textColor="@color/textPrimary"
            android:gravity="end" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/to"
            android:textSize="15sp"
            android:textColor="@color/textPrimary"
            android:gravity="center" />

        <TextView android:id="@+id/group_end_datetime"
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="31 Feb 2016"
            android:textSize="15sp"
            android:textColor="@color/textPrimary" />

    </LinearLayout>

</LinearLayout>