<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EditExpenseActivity"
    tools:showIn="@layout/activity_edit_expense">

    <EditText android:id="@+id/expense_name"
        android:layout_margin="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp" >

        <TextView android:id="@+id/expense_date"
            android:layout_margin="5sp"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="displayDatetimePicker"
            android:hint="29/03/2016"
            android:textSize="15sp"
            android:textColor="@color/textPrimary"
            android:textAlignment="center" />

        <TextView android:id="@+id/expense_time"
            android:layout_margin="5sp"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="displayDatetimePicker"
            android:hint="12:00"
            android:textSize="15sp"
            android:textColor="@color/textPrimary"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner android:id="@+id/expense_currency"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <EditText android:id="@+id/expense_amount"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/amount" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <com.grasskode.baniyagiri.layouts.FlowLayout
            android:id="@+id/tags_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.grasskode.baniyagiri.layouts.FlowLayout>
    </ScrollView>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView android:id="@+id/add_tag"
            android:background="@drawable/selection_border"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890 _"
            android:completionThreshold="1"
            android:inputType="text"
            android:hint="@string/tag" />

        <ImageView
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:tint="@color/colorAccent"
            android:clickable="true"
            android:onClick="addTag"
            android:src="@drawable/ic_add_black_24dp" />
    </LinearLayout>

    <Button android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/create"
        android:textColor="@color/textPrimary"
        android:background="@color/colorPrimaryLight"
        android:onClick="editExpense" />

    <Button android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/delete"
        android:textColor="@color/textPrimary"
        android:background="@color/colorDelete"
        android:onClick="deleteExpense" />

</LinearLayout>